# lms

./: .gitignore
backend/: README.md  TODO.md  commands.txt  docker-compose.yml  project_settings.yaml  pyproject.toml  pytest.ini  shell.py
backend/alembic/: env.py
backend/alembic/versions/: 10070958ec7a_implement_lesson_progress_module.py  18ae0082106f_create_users_table.py  20da38631744_fix_lessons_timestamps.py  34b385d4caeb_add_categories_table.py  4b98ae60207c_add_discussion_and_comment_tables.py  4f7bb33c5caa_implement_question_module.py  516088866238_fix_courses_timestamps_inheritance.py  5888adfd0150_add_modules_table.py  61656f9bd5e3_add_quiz_tables.py  675670b6dba5_update_users_table.py  6f7fdbcddcd0_add_lessons_table.py  780e16b3a4c1_implement_quiz_attempt_module.py  854a832958bf_add_category_image_url.py  854a832958bf_add_category_thumbnail.py  8f0d4a08c654_add_category_type.py  8fe4d513d08e_create_category_table.py  913b1cccc08c_add_courses_table.py  a14957885698_add_wishlist_table.py  b7aa2dd469a0_initial.py  (+8 more)
backend/app/: main.py
backend/app/api/: deps.py
backend/docs/: 01_QUICKSTART.md  02_SETUP.md  03_ARCHITECTURE.md  04_PROJECT_SETTINGS.md  05_CELERY.md  06_CATEGORY.md  07_TESTING.md  08_COURSE.md  09_REVIEW.md  10_WISHLIST.md  11_MODULE.md  12_LESSON.md  QUICKSTART.md  discussions_and_comments.md  enrollments.md  lesson_progress.md  quizzes.md
backend_backup_original/: .gitignore  Dockerfile  README.md  alembic.ini  project_settings.yaml  pyproject.toml
backend_backup_original/app/: main.py
backend_backup_original/docs/: 01_QUICKSTART.md
(+356 files in other folders)
